<resources>
	<string name="app_name">HW5</string>
	<string name="edit">Edit</string>
	<string name="priority">Priority</string>
	<string name="description">Description</string>
	<string name="name">Name</string>
	<string name="sample_name">Sample Name</string>
	<string name="sample_description">Sample Description</string>
	<string name="_1">1</string>
	<string name="done">Mark Done</string>
	<string name="cancel">Cancel</string>
    <string name="save">Save</string>
	<string name="snooze">Snooze</string>
    <string name="sample_duetime">sample due time</string>
    <string name="status">status</string>
    <string name="add_item">Add Item</string>
</resources>
