<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".EditActivity">

    <item android:id="@+id/save"
        android:icon="@drawable/ic_save_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/cancel"
        android:icon="@drawable/ic_clear_24dp"
        android:title="@string/cancel"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/done"
        android:icon="@drawable/ic_check_circle_white_32dp"
        android:title="@string/done"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/snooze"
        android:icon="@drawable/ic_replay_10_white_32dp"
        android:title="@string/snooze"
        app:showAsAction="ifRoom|withText" />
</menu>
